# ImageColorPaletteExtractor

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build_and_test.bat  build_and_test.sh  example.html  test.html
.github/workflows/: release.yml
src/: lib.rs
tests/: web.rs
