[package]
name = "image_color_palette_extractor"
version = "0.1.4"
authors = ["RoMarketPlace <tbm@ixstudiodev.com>", "Max Thakur <dev@maxthakur.xyz>"]
edition = "2018"
repository = "https://github.com/TheBloxMarket/ImageColorPaletteExtractor"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.63"
serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# For k-means clustering functionality
kmeans_colors = { version = "0.6", default-features = false }
# For random number generation
rand = { version = "0.8", default-features = false }
getrandom = {version = "0.2", features = ["wasm-bindgen", "js"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for a small code size.
opt-level = "s"
lto = true
