[package]
name = "image_color_extractor"
version = "0.1.0"
authors = ["RoMarketPlace <tbm@ixstudiodev.com>", "Max Thakur <dev@maxthakur.xyz>"]
edition = "2018"
repository = "https://github.com/romarketplace-com/ImageColorPaletteExtractor.git"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.63"
serde = { version = "1.0", features = ["derive"] }
wee_alloc = "0.4.5"

# For k-means clustering functionality
kmeans_colors = { version = "0.6", default-features = false }
# For random number generation
rand = { version = "0.8", default-features = false }
getrandom = {version = "0.2", features = ["wasm-bindgen", "js"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for a small code size.
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-all', '-O']